// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative internal/blob/blobpb/*.proto

syntax = "proto3";
package blobpb; 

import "internal/blob/blobpb/message.proto";

option go_package = "./blobpb";


service StorageService {
    rpc UploadObject(stream UploadRequest) returns (UploadResponse);
    rpc DownloadObject(DownloadRequest) returns (stream DownloadResponse);
    rpc DeleteObject(DeleteRequest) returns (DeleteResponse);

    rpc ShareObject(ShareObjectRequest) returns (ShareObjectResponse) ;
    rpc DownloadSharedObject(DownloadSharedRequest) returns (stream DownloadResponse);

    rpc ListObject(ListObjectRequest) returns (stream ListObjectResponse);
}